--- a/MonType.cabal
+++ b/MonType.cabal
@@ -3,6 +3,7 @@ cabal-version:       >=1.10
 name:                MonType
 version:             0.1.0.0
 description:         Generate TypeScript type definitions for Mongoose models.
+license-file:        LICENSE
 author:              Udit Karode
 maintainer:          udit.karode@gmail.com
 build-type:          Simple
