treewide: switch to megaparsec
Megaparsec has better support for Data.Text, better error messages, and is a more maintained variant of parsec. switch to it.

--- a/MonType.cabal
+++ b/MonType.cabal
@@ -30,7 +30,7 @@ executable MonType
                      , containers
                      , directory
                      , either
-                     , parsec
+                     , megaparsec
                      , text
                      , ini
   hs-source-dirs:      src
