--- a/MonType.cabal
+++ b/MonType.cabal
@@ -1,7 +1,7 @@
 cabal-version:       >=1.10
 
 name:                MonType
-version:             0.1.0.0
+version:             0.2
 description:         Generate TypeScript type definitions for Mongoose models.
 license-file:        LICENSE
 author:              Udit Karode
@@ -22,7 +22,7 @@ executable MonType
                      , Codegen.Codegen
                      , Codegen.Helpers
                      , Codegen.Getters
-                     , Logger
+                     , Utils
                      , Config
   build-depends:       base >=4.13 && <4.14
                      , optparse-applicative
