--- a/MonType.cabal
+++ b/MonType.cabal
@@ -25,7 +25,7 @@ executable MonType
                      , Paths_MonType
                      , Utils
                      , Config
-  build-depends:       base >=4.13 && <4.14
+  build-depends:       base >=4.16
                      , optparse-applicative
                      , pretty-terminal
                      , containers
